--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,13 @@
 /public/build
 /public/hot
 /public/storage
+/public/uploads/*
+!/public/uploads/.gitignore
 /storage/*.key
 /storage/pail
 /vendor
 Homestead.json
 Homestead.yaml
 Thumbs.db
+*.msi
+pgt_dev
