--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -12,11 +12,15 @@ autorestart=true
 priority=10
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
 
 [program:nginx]
-command=/usr/sbin/nginx -g "daemon off;"
+command=/bin/sh -c "envsubst '$PORT' < /etc/nginx/http.d/default.conf.template > /etc/nginx/http.d/default.conf && nginx -g 'daemon off;'"
 autostart=true
 autorestart=true
 priority=20
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
