--- a/render.yaml
+++ b/render.yaml
@@ -17,9 +17,11 @@ services:
       - key: APP_DEBUG
         value: "false"
       - key: APP_KEY
-        generateValue: true
+        value: base64:rnSqRdNcdx6Mfuh3Gn2j0E6K7R6Lu890blHpyRiei9U=
       - key: APP_URL
         sync: false
+      - key: VIEW_COMPILED_PATH
+        value: /var/www/html/storage/framework/views
       - key: LOG_CHANNEL
         value: stderr
       - key: LOG_LEVEL
